grammar.js
    start: $ => choice(
      $.program_definition,
      $.copybook_definition
      //optional($.function_definition) //todo
    ),

    program_definition: $ => prec.right(seq(
      $.identification_division,
      optional($.environment_division),
      optional($.data_division),
      optional($.procedure_division), //todo
      repeat($.end_program), //todo
      //optional($.LINE_PREFIX_COMMENT),
    )),

    identification_division: $ => seq(
      $._IDENTIFICATION, $._DIVISION, '.',
      optional(
        seq($._PROGRAM_ID, '.',
          $.program_name,
          optional(choice(
            $.as_literal,
            $.is_initial,
            $.is_common)),
          '.')),
      repeat(choice(
        $.author_section,
        $.installation_section,
        $.date_written_section,
        $.date_compiled_section,
        $.security_section)),
    ),

    program_name: $ => choice(
      $._WORD,
      $._LITERAL
    ),

    data_division: $ => seq(
      $._DATA, $._DIVISION, '.',
      optional($.file_section),
      optional($.working_storage_section),
      optional($.local_storage_section),
      optional($.linkage_section),
      optional($.report_section),
      optional($.screen_section),
    ),

    working_storage_section: $ => seq(
      $._WORKING_STORAGE, $._SECTION, '.',
      repeat(seq($.data_description, repeat1('.')))
    ),

    data_description: $ => choice(
      $.constant_entry,
      seq(
        $.level_number, $.entry_name,
        repeat($._data_description_clause), optional($._LITERAL)
      ),
      seq(
        $.level_number,
        repeat1($._data_description_clause), optional($._LITERAL)
      ),
      /*seq(
        $.level_number_88, $.entry_name
      ),*/
    ),

    level_number: $ => /[0-9][0-9]?/,
    entry_name: $ => choice(
      $._FILLER,
      $._WORD
    ),

    _data_description_clause: $ => choice(
      $.redefines_clause,
      $.external_clause,
      $.global_clause,
      $.picture_clause,
      $.usage_clause,
      $.sign_clause,
      $.occurs_clause,
      $.justified_clause,
      $.synchronized_clause,
      $.blank_clause,
      $.based_clause,
      $.value_clause,
      $.renames_clause,
      $.any_length_clause,
      $.error
    ),

    redefines_clause: $ => seq(
      $._REDEFINES, $._identifier
    ),

    _identifier: $ => prec.right(choice(
      $.qualified_word,
      seq($.qualified_word, $.subref),
      seq($.qualified_word, $.refmod),
      seq($.qualified_word, $.subref, $.refmod),
    )),

    qualified_word: $ => sepBy(
      $.WORD, $._in_of
    ),

    _in_of: $ => choice(
      $._IN,
      $._OF
    ),

    picture_clause: $ => seq(
      choice($._PICTURE, $._PIC),
      optional($._IS),
      $._picture_string
    ),

    //todo
    _picture_string: $ => choice(
      $.picture_x,
      $.picture_n,
      $.picture_9,
      $.picture_a,
      $.picture_edit,
    ),

    picture_9: $ => choice(
      $._picture_9_z,
      $._picture_9_v_1,
      $._picture_9_v_2,
    ),
    _picture_9_z: $ => /[sS]?(9(\([0-9]+\))?)+([zZ](\([0-9]+\))?)+/,
    _picture_9_v_1: $ => /[sS]?([pP9](\([0-9]+\))?)+([vV]([pP9](\([0-9]+\))?)*)?/,
    _picture_9_v_2: $ => /[sS]?[vV]([pP9](\([0-9]+\))?)*/,

    procedure_division: $ => seq(
      $._PROCEDURE, $._DIVISION,
      optional($.procedure_using_chaining),
      optional($.procedure_returning),
      '.',
      optional($.procedure_declaratives),
      optional($._procedure_division_contenet)
    ),

    _procedure_division_contenet: $ => prec.right(choice(
      seq(
        optional($._procedure_division_headers),
        repeat(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat1($._procedure_division_statement)
      ),
      seq(
        optional($._procedure_division_headers),
        repeat1(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat($._procedure_division_statement)
      ),
    )),

    _LITERAL: $ => choice(
      $.number,
      $._string,
    ),

    //todo
    _DATA: $ => /[dD][aA][tT][aA]/,
    _DIVISION: $ => /[dD][iI][vV][iI][sS][iI][oO][nN]/,
    _FILLER: $ => /[fF][iI][lL][lL][eE][rR]/,
    _IDENTIFICATION: $ => /[iI][dD][eE][nN][tT][iI][fF][iI][cC][aA][tT][iI][oO][nN]/,
    _IS: $ => /[iI][sS]/,
    _PIC: $ => /[pP][iI][cC]/,
    _PICTURE: $ => /[pP][iI][cC][tT][uU][rR][eE]/,
    _PROCEDURE: $ => /[pP][rR][oO][cC][eE][dD][uU][rR][eE]/,
    _PROGRAM_ID: $ => /[pP][rR][oO][gG][rR][aA][mM]-[iI][dD]/,
    _REDEFINES: $ => /[rR][eE][dD][eE][fF][iI][nN][eE][sS]/,
    _SECTION: $ => /[sS][eE][cC][tT][iI][oO][nN]/,
    _WORD: $ => /([0-9][a-zA-Z0-9-]*[a-zA-Z][a-zA-Z0-9-]*)|([a-zA-Z][a-zA-Z0-9-]*)/,
    _WORKING_STORAGE: $ => /[wW][oO][rR][kK][iI][nN][gG]-[sS][tT][oO][rR][aA][gG][eE]/,
