corpus/redefines.txt
====================================
Redefines
====================================
       identification division.
       program-id. a.
       data division.
       working-storage section.
       01 sys-date.
         03 date-full PIC 9(08).
         03 date-r redefines date-full.
           05 date-year pic 9(04).
           05 date-month pic 9(02).
           05 date-day pic 9(02).
       procedure division.
---
(start
  (program_definition
    (identification_division
      (program_name))
    (data_division
      (working_storage_section
        (data_description
          (level_number)
          (entry_name))
        (data_description
          (level_number)
          (entry_name)
          (picture_clause
            (picture_9)))
        (data_description
          (level_number)
          (entry_name)
          (redefines_clause
            (qualified_word)))
        (data_description
          (level_number)
          (entry_name)
          (picture_clause
            (picture_9)))
        (data_description
          (level_number)
          (entry_name)
          (picture_clause
            (picture_9)))
        (data_description
          (level_number)
          (entry_name)
          (picture_clause
            (picture_9)))))
    (procedure_division)))
