test/corpus/comment.txt
====================================
comment
====================================
aaaaaa identification division.
aaaaaa program-id. a.                                                   aaaaa
      *aaaa
---
(start
  (program_definition
    (identification_division
      (program_name))))
