test/corpus/minimal-cobol.txt
====================================
Minimal COBOL program
====================================

       identification division.
       program-id. a.
       procedure division.
       stop run.
       stop run.

---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (stop_run_statement)
      (stop_run_statement))))
